# WTFX

./: .gitignore  CMakeLists.txt  README.md
data/Locust Dicom ZIP/: Image_0003.dcm  Image_0005.dcm  Image_0009.dcm  Image_0013.dcm  Image_0021.dcm  Image_0027.dcm  Image_0029.dcm  Image_0033.dcm  Image_0035.dcm  Image_0039.dcm  Image_0049.dcm  Image_0057.dcm  Image_0065.dcm  Image_0067.dcm  Image_0069.dcm  Image_0077.dcm  Image_0089.dcm  Image_0091.dcm  Image_0093.dcm  Image_0101.dcm  Image_0103.dcm  Image_0107.dcm  Image_0109.dcm  Image_0113.dcm  Image_0125.dcm  Image_0131.dcm  Image_0133.dcm  Image_0143.dcm  Image_0147.dcm  Image_0149.dcm  Image_0151.dcm  Image_0155.dcm  Image_0157.dcm  Image_0159.dcm  Image_0163.dcm  Image_0169.dcm  Image_0171.dcm  Image_0179.dcm  Image_0181.dcm  Image_0183.dcm  (+225 more)
include/extraction/: data_extraction.h
include/generator/: phatomwavelet.h
include/image_processing/: image_preprocessing.h
include/transformation/: wavelet_transform.h
measurement/Locust/: Image_0001.dcm  Image_0007.dcm  Image_0011.dcm  Image_0015.dcm  Image_0017.dcm  Image_0019.dcm  Image_0023.dcm  Image_0025.dcm  Image_0031.dcm  Image_0037.dcm  Image_0041.dcm  Image_0043.dcm  Image_0045.dcm  Image_0047.dcm  Image_0051.dcm  Image_0053.dcm  Image_0055.dcm  Image_0059.dcm  Image_0061.dcm  Image_0063.dcm  Image_0071.dcm  Image_0073.dcm  Image_0075.dcm  Image_0079.dcm  Image_0081.dcm  Image_0083.dcm  Image_0085.dcm  Image_0087.dcm  Image_0095.dcm  Image_0097.dcm  Image_0099.dcm  Image_0105.dcm  Image_0111.dcm  Image_0115.dcm  Image_0117.dcm  Image_0119.dcm  Image_0121.dcm  Image_0123.dcm  Image_0127.dcm  Image_0129.dcm  (+225 more)
src/: main.cc  main.cpp
src/extraction/: data_extraction.cc
src/generator/: phatomwavelet.cpp
src/image_processing/: image_prepocessing.cpp
src/transformation/: wavelet_transform.cc
